--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,21 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "template_python"
+name = "jiosaavn"
 authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
 readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 dependencies = [
-    "pandas",
+    "ak_cache",
     "typer[all]",   #cli_app.py
     "icecream",     
     "slack_sdk",    #Slack.py
     "requests",   #request_package
     "beautifulsoup4",   #request_package
-    "keyring"   #credentials.py
+    "ffmpy",
+    "eyed3"
 ]
 
 [project.optional-dependencies]
@@ -30,4 +31,4 @@ test = [
 Home = "https://github.com/rpakishore/Template-Python"
 
 [project.scripts]
-app="template_python.cli_app:app"
+app="jiosaavn.cli_app:app"
