--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,14 @@ license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 dependencies = [
-    "ak_cache",
-    "typer[all]",   #cli_app.py
-    "icecream",     
-    "slack_sdk",    #Slack.py
-    "ak_requests",   #request_package
-    "beautifulsoup4",   #request_package
-    "ffmpy",
-    "eyed3",
-    "keyring","brotlipy"
+    "typer[all]",
+    "icecream==2.1.3",     
+    "slack_sdk==3.26.1",
+    "ak_requests==0.1.0",
+    "ffmpy==0.3.1",
+    "eyed3==0.9.7",
+    "keyring==24.3.0",
+    "brotlipy==1.1.0"
 ]
 
 [project.optional-dependencies]
@@ -31,4 +30,4 @@ test = [
 Home = "https://github.com/rpakishore/Template-Python"
 
 [project.scripts]
-app="jiosaavn.cli_app:app"
+jiosaavn="jiosaavn.cli_app:app"
