--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,8 @@
 [paths]
 db_folder='''Y:\Music'''
 destination='''Y:\Music'''
+
+[gotify]
+url='https://gotify.rpakishore.co.in'
+app_name='Media'
+app_key=''  # Alternatively set this to "" and save the app_key to keyring under ('gotify', 'app_key')
